--- a/app.wxss
+++ b/app.wxss
@@ -1,9 +1,11 @@
 @import 'style/weui.wxss';
 
 page{
-    background-color: #F8F8F8;
+    /*background-image:url("./images/首页1.png");*/
+    /*background-color: #F8F8F8;*/
     font-size: 16px;
     font-family: -apple-system-font,Helvetica Neue,Helvetica,sans-serif;
+   
 }
 .page__hd {
     padding: 40px;
@@ -32,4 +34,34 @@ page{
     color: #888888;
     text-align: left;
     font-size: 14px;
+}
+
+.my-button{
+  width:200px;
+background-color:transparent !important;
+color:white !important;
+border:solid 1px #1079b8;
+margin-bottom:10px; 
+}
+
+.my_title{
+  color:white !important;
+  margin-left:auto;
+  margin-right:auto;
+  margin-bottom:10px;
+  
+}
+
+.index_header{
+   text-align:center;
+ 
+width:100%; 
+}
+.index_buttons{
+   text-align:center;
+margin-bottom:10px;
+position:absolute;
+width:100%;
+bottom:10px;
+
 }
