--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,5 +1,6 @@
 <!--index.wxml-->
-<view class="container">
+
+<view class="container"  scroll-y="true"  >
   <!--<view  bindtap="bindViewTap" class="userinfo">
     <image class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
     <text class="userinfo-nickname">{{userInfo.nickName}}</text>
@@ -23,12 +24,15 @@
 </view> 
  -->
    
+<view class="index_header">
+   <image style="width: 200px; height: 200px; "  src="../../images/shouye.png"></image>
+</view>
+<view class="index_buttons">
 
- <view class="log">
-  <image style="width: 200px; height: 200px; background-color: #eeeeee;"  src="../../images/log.jpg"></image>
- </view>
-<button type="primary" size="default" bindtap="startGame"> 开始游戏 </button>
-
+ <view class="my_title" >请选择游戏模式</view>
+<button type="default" class="my-button"  size="default" bindtap="startGame"> 聚会游戏 </button>
+<button type="default" class="my-button" size="default" bindtap="startGame">在线游戏 </button>
+</view>
  
 <!--<view class="page">
   <view class="page__hd">
