--- a/pages/playwodi/playwodi.wxml
+++ b/pages/playwodi/playwodi.wxml
@@ -1,4 +1,7 @@
-  <view class="weui-cells__title">玩家(不包括法官)</view>
+  <view class="container"  scroll-y="true" >
+  
+  
+  <view style="margin-top:100px;" class="weui-cells__title">玩家(不包括法官)</view>
         <view class="weui-cells weui-cells_after-title">
             <view class="weui-cell weui-cell_input">
                 <view class="weui-cell__hd">
@@ -35,5 +38,6 @@
             </view>
         </view>
 
-        <button type="primary" size="default" bindtap="startGame"> 开始发词 </button>
- 
+        <button style="margin-top:50px;" type="primary" size="default" bindtap="startGame"> 开始发词 </button>
+
+ </view>
