--- a/pages/gamemain/gamemain.wxml
+++ b/pages/gamemain/gamemain.wxml
@@ -1,23 +1,67 @@
-  
-<wx-view class="page">
+ <scroll-view  class="container" scroll-y="{{scroll_y}}" style=""    >
+
+  <view   class="kapai_title">未查看（{{weichakan_kapai_list.length}}）</view>
+
+  <view class="yichakan">
+   <view class="kapai" data-player_type="weichakan" data-player_num="{{item.player_num}}"  bindtap="player_caozuo"  wx:for="{{weichakan_kapai_list}}" wx:key="player_num" >
+ <image style="width:700rpx; height: 194rpx; "   src="{{item.image_src}}"></image>
+
+  <input wx:if="{{item.player_name_input_visable}}" focus="{{item.player_name_input_visable}}"  data-player_num="{{item.player_num}}"  class="weui-input player_name_input" placeholder="昵称" value="{{item.player_name}}" bindblur="setPlayerName" />
+  <text wx:if="{{!item.player_name_input_visable}}" class="player_name">{{item.player_name}}</text>
+   <view class="player_num">{{item.player_num}}</view>
    
-   <view class="yichakan">
-    <image style="width: 100%; height: 100px; " bindtap="jiekaidipai" src="../../images/zhuangtai1.png"></image>
-  
-  <image style="width: 100%; height: 100px; " bindtap="jiekaidipai"  src="../../images/zhuangtai1.png"></image>
-  
-  <image style="width: 100%; height: 100px; " bindtap="jiekaidipai"  src="../../images/zhuangtai1.png"></image>
-  
-  <image style="width: 100%; height: 100px; " bindtap="jiekaidipai"  src="../../images/zhuangtai1.png"></image>
-            <image style="width: 100%; height: 100px; "  src="../../images/zhuangtai1.png"></image>
-              <image style="width: 100%; height: 100px; "  src="../../images/zhuangtai1.png"></image>
+
+    <image   wx:if="{{item.out_status}}" class="out_status" src="../../images/yichuqu.png"></image>
+   
+   </view>
+   
+</view>
+
+
+<view   class="kapai_title">已查看（{{yichakan_kapai_list.length}}）</view>
+ <view class="yichakan">
+   <view class="kapai" data-player_type="yichakan" data-player_num="{{item.player_num}}" bindtap="player_caozuo" wx:for="{{yichakan_kapai_list}}"  wx:key="player_num">
+ <image style="width:700rpx; height: 194rpx;  "     src="{{item.image_src}}"></image>
+
+  <text class="player_name {{item.out_status_player_name}} {{item.dipai}}">{{item.player_name}}</text>
+  <text class="dipai_player_word">{{item.word}}</text>
+   <view class="player_num">{{item.player_num}}</view>
+   
+    <image  wx:if="{{item.out_status}}" class="out_status" src="../../images/yichuqu.png"></image>
+   </view>
+   
 </view>
   
  
+ 
 
-<wx-view class="button-sp-area">
-    <button type="warn" size="default" bindtap="jiekaidipai"> 揭开底牌 </button>
+ 
+       
+ 
+ <view  class="dipai_btn_container"  >
+ <button   class="my-footer_btn1" size="default" bindtap="restart"> 开新局</button>
+ <button   class="my-footer_btn2" size="default" bindtap="jiekai"> 揭开底牌</button>
+         
+　</view>
+ 
 
-</wx-view>
-
-</wx-view>
+<view  class="wx-modal" wx:if="{{showResultDialog}}" >
+  <view class="wx-modal-mask" style="height:100%" ></view>
+  <view class="wx-modal-dialog">
+    <view class="wx-modal-dialog-hd">
+      <strong></strong>
+    </view>
+    <view class="wx-modal-dialog-bd">
+     <image    class="result_image" src="{{result_image_src}}"></image>
+    </view>
+    <view class="wx-modal-dialog-ft dipai_btn_container">
+     
+ 
+ <button   class="my-footer_btn3" size="default" bindtap="restart"> 开新局</button>
+ <button   class="my-footer_btn4" size="default" bindtap="jiekai"> 揭开底牌</button>
+         
+ 
+    </view>
+  </view>
+</view>
+</scroll-view>
