--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,29 +1,7 @@
 <!--index.wxml-->
 
 <view class="container"  scroll-y="true"  >
-  <!--<view  bindtap="bindViewTap" class="userinfo">
-    <image class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
-    <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-  </view>
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
-  </view>-->
-
-  <!--index.wxml-->
- <!--<import src="../cell/cell.wxml" /> 
-<view class="pages-container"> 
- <scroll-view scroll-y="true" class="pages-wrapper"> 
-  <view wx:for="{{pageItems}}" wx:key="{{text}}"> 
-   <view class="pages-row"> 
-    <template is="cell" data="{{...item[0],cellHeight}}" /> 
-    <template is="cell" data="{{...item[1],cellHeight}}" /> 
-    <template is="cell" data="{{...item[2],cellHeight}}" /> 
-   </view> 
-  </view> 
- </scroll-view> 
-</view> 
- -->
-   
+  
 <view class="index_header">
    <image style="width: 200px; height: 200px; "  src="../../images/shouye.png"></image>
 </view>
@@ -31,23 +9,9 @@
 
  <view class="my_title" >请选择游戏模式</view>
 <button type="default" class="my-button"  size="default" bindtap="startGame"> 聚会游戏 </button>
-<button type="default" class="my-button" size="default" bindtap="startGame">在线游戏 </button>
+<button type="default" class="my-button" size="default" bindtap="startOnlineGame">在线游戏 </button>
 </view>
  
-<!--<view class="page">
-  <view class="page__hd">
-    <text class="page__title">image</text>
-    <text class="page__desc">图片</text>
-  </view>
-  <view class="page__bd">
-    <view class="section section_gap" wx:for="{{array}}" wx:for-item="item">
-      <view class="section__title">{{item.text}}</view>
-      <view class="section__ctn">
-        <image style="width: 200px; height: 200px; background-color: #eeeeee;" mode="{{item.mode}}" src="{{src}}"></image>
-      </view>
-    </view>
-  </view>
-</view>-->
 
 </view>
 
