--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,6 +1,4 @@
- .log{
-   text-align: center;
- }
+
  page{
-   background-image:linear-gradient(to bottom,#105788,#41f0fe);
+   background-image:linear-gradient(to bottom,#2883e4,#68dffa);
 }
