--- a/app.wxss
+++ b/app.wxss
@@ -121,7 +121,7 @@ border:solid 1px #1079b8;
 }
 
 .dipai_header{
-   margin-top:50px;
+   margin-top:20px;
    text-align:center;
    width:100%; 
 }
@@ -129,11 +129,24 @@ border:solid 1px #1079b8;
   text-align:center;
   width:100%; 
   height: 200rpx;
-  margin-top:80rpx;
+  margin-top:10rpx;
   color:white;
   font-size:100rpx;
 
 }
+ .dipai_tip{
+ text-align: center;
+color:white;
+font-size:larger;
+
+ }
+ .dipai_bottom{
+ position: absolute;
+ bottom: 5px;
+ width:750rpx; 
+ height:303rpx;
+
+ }
 .index_buttons{
    text-align:center;
 margin-bottom:10px;
@@ -350,3 +363,19 @@ padding-left:30px;
 }
 
  
+ .shuoming{
+   padding-top: 50rpx;
+   width: 100%;
+   padding-bottom: 20rpx;
+ }
+ .shuoming_header{
+   padding: 5px 50px;
+   font-weight: bold;
+   font-size:large;
+ }
+
+ .shuoming_neirong{
+   padding: 5px 50px;
+    font-size:small;
+    color:#919191;
+ }
