--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -5,11 +5,12 @@
 <view class="index_header">
    <image style="width: 200px; height: 200px; "  src="../../images/shouye.png"></image>
 </view>
+<view class="index_tip" >分词小助手,判定输赢</view>
 <view class="index_buttons">
 
  <!--<view class="my_title" >请选择游戏模式</view>-->
 <button type="default" class="my-button"  size="default" bindtap="startGame"> 现在开始 </button>
-<button type="default" class="my-button" size="default" bindtap="startOnlineGame">玩法说明 </button>
+<button type="default" class="my-button" size="default" bindtap="startOnlineGame">介绍说明 </button>
 </view>
  
 
